--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,1 +1,26 @@
+server.port = 9001
+
+# ===============================
+# = DATA SOURCE 
+# ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/userDB?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+spring.jpa.database-platform:org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = create
+
+
+
+#Sending Email configuration
+spring.mail.username=
+spring.mail.password=
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+
 
