--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 9001
 # ===============================
 # = DATA SOURCE 
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/userDB?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/userDB?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -13,7 +13,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # ===============================
 spring.jpa.database-platform:org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
 
 
