--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -13,14 +13,27 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # ===============================
 spring.jpa.database-platform:org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
+
 
 
 
 #Sending Email configuration
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=bigbadwolf3768@gmail.com
+spring.mail.password=Secret@1234#
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
+
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 
 
