--- a/BookingService/pom.xml
+++ b/BookingService/pom.xml
@@ -34,6 +34,11 @@
 			<version>3.3.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.modelmapper.extensions</groupId>
+			<artifactId>modelmapper-spring</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
