--- a/BookingService/src/main/resources/application.properties
+++ b/BookingService/src/main/resources/application.properties
@@ -11,7 +11,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # ===============================
 spring.jpa.database-platform= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
+
+spring.jackson.default-property-inclusion: NON_NULL
+
 
 
 server.port=9002
