--- a/BusPortal/src/main/resources/application.properties
+++ b/BusPortal/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-
+BOOKING_SERVICE=http://localhost:9002/booking/
+CUSTOMER_SERVICE=http://localhost:9002/customer/
+BUS_SERVICE=http://localhost:9002/bus/
+BUSES_SERVICE=http://localhost:9002/buses
+BUS_STATUS_SERVICE=http://localhost:9002/busStatus/
+BUS_CATEGORY_SERVICE=http://localhost:9002/busCategory/
+SEAT_SERVICE=http://localhost:9002/seat/
+SEATS_SERVICE=http://localhost:9002/seats/
+TRAVELS_SERVICE=http://localhost:9002/travel/
+TRAVELS_PLURAL_SERVICE=http://localhost:9002/travels/
+BOOKING_SERVICE_TICKET=http://localhost:9002/ticket/
+BOOKING_SERVICE_CANCEL_TICKET=http://localhost:9002/cancelTicket/
+CONFIRM_CUSTOMER_SERVICE=http://localhost:9002/confirmCustomer/
+CUSTOMERS_SERVICE=http://localhost:9002/customers/
+BOOKING_SERVICE=http://localhost:9002/bookings/
