Cancel Ticket Changes Seat status

--- a/BookingService/src/main/resources/application.properties
+++ b/BookingService/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
-spring.jpa.database-platform= org.hibernate.dialect.MySQL5InnoDBDialect
+
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create
 
