Resolved Uniqueness Issue

--- a/BusPortal/src/main/resources/application.properties
+++ b/BusPortal/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 BOOKING_SERVICE=http://localhost:9002/booking/
 CUSTOMER_SERVICE=http://localhost:9001/customer/
+CUSTOMER_SERVICE_BY_ID=http://localhost:9001/customerById/
+CUSTOMER_SERVICE_BY_NAME=http://localhost:9001/customerByName/
 BUS_SERVICE=http://localhost:9002/bus/
 BUSES_SERVICE=http://localhost:9002/buses
 BUS_STATUS_SERVICE=http://localhost:9002/busStatus/
