--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -11,9 +11,18 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
-spring.jpa.database-platform:org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.database-platform:org.hibernate.dialect.MySQL5Dialect
+
+
+
+#ADDED BY ME BELOW
+spring.jpa.database-platform:org.hibernate.dialect.MySQL8Dialect
+
+#ADDED BY ME!!!
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 
 
 
