Boooking Customer Id

--- a/BusPortal/src/main/resources/application.properties
+++ b/BusPortal/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 BOOKING_SERVICE=http://localhost:9002/booking/
+BOOKING_SERVICE_1=http://localhost:9002/booking
 CUSTOMER_SERVICE=http://localhost:9001/customer/
 CUSTOMER_SERVICE_BY_ID=http://localhost:9001/customerById/
 CUSTOMER_SERVICE_BY_NAME=http://localhost:9001/customerByName/
@@ -7,6 +8,7 @@ BUSES_SERVICE=http://localhost:9002/buses
 BUS_STATUS_SERVICE=http://localhost:9002/busStatus/
 BUS_CATEGORY_SERVICE=http://localhost:9002/busCategory/
 SEAT_SERVICE=http://localhost:9002/seat/
+UPDATE_SEATS_SERVICE=http://localhost:9002/updateSeats/
 SEATS_SERVICE=http://localhost:9002/seats/
 TRAVELS_SERVICE=http://localhost:9002/travel/
 TRAVELS_PLURAL_SERVICE=http://localhost:9002/travels/
@@ -14,4 +16,4 @@ BOOKING_SERVICE_TICKET=http://localhost:9002/ticket/
 BOOKING_SERVICE_CANCEL_TICKET=http://localhost:9002/cancelTicket/
 CONFIRM_CUSTOMER_SERVICE=http://localhost:9001/confirmCustomer/
 CUSTOMERS_SERVICE=http://localhost:9001/customers/
-BOOKING_SERVICE=http://localhost:9002/bookings/
+BOOKING_SERVICE_PLURAL=http://localhost:9002/bookings/
