--- a/BusPortal/src/main/resources/application.properties
+++ b/BusPortal/src/main/resources/application.properties
@@ -17,3 +17,13 @@ BOOKING_SERVICE_CANCEL_TICKET=http://localhost:9002/cancelTicket/
 CONFIRM_CUSTOMER_SERVICE=http://localhost:9001/confirmCustomer/
 CUSTOMERS_SERVICE=http://localhost:9001/customers/
 BOOKING_SERVICE_PLURAL=http://localhost:9002/bookings/
+
+
+
+
+
+CUSTOMER_SERVICE=http://localhost:9001/customer
+CONFIRM_CUSTOMER_SERVICE=http://localhost:9001/confirmCustomer/
+CUSTOMERS_SERVICE=http://localhost:9001/customers/
+CUSTOMER_BY_ID_SERVICE=http://localhost:9001/customerById/
+CUSTOMER_BY_NAME_SERVICE=http://localhost:9001/customerByName/
