--- a/BusPortal/src/main/resources/application.properties
+++ b/BusPortal/src/main/resources/application.properties
@@ -20,10 +20,20 @@ BOOKING_SERVICE_PLURAL=http://localhost:9002/bookings/
 
 
 
-
-
 CUSTOMER_SERVICE=http://localhost:9001/customer
 CONFIRM_CUSTOMER_SERVICE=http://localhost:9001/confirmCustomer/
 CUSTOMERS_SERVICE=http://localhost:9001/customers/
 CUSTOMER_BY_ID_SERVICE=http://localhost:9001/customerById/
 CUSTOMER_BY_NAME_SERVICE=http://localhost:9001/customerByName/
+
+
+TRAVELLER_SERVICE=http://localhost:9001/travels
+CONFIRM_TRAVELLER_SERVICE=http://localhost:9001/confirmTravels
+
+
+ADMIN_SERVICE=http://localhost:9001/admin
+CONFIRM_ADMIN_SERVICE=http://localhost:9001/confirmAdmin
+
+
+
+
