--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -46,3 +46,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 
+MAIL_SERVICE_TRAVELS=bigbadwolf3768@gmail.com
+MAIL_SERVICE_ADMIN=bigbadwolf3768@gmail.com
+
+
+
