Bus Portal Changes

--- a/BusPortal/src/main/resources/application.properties
+++ b/BusPortal/src/main/resources/application.properties
@@ -34,6 +34,6 @@ CONFIRM_TRAVELLER_SERVICE=http://localhost:9001/confirmTravels
 ADMIN_SERVICE=http://localhost:9001/admin
 CONFIRM_ADMIN_SERVICE=http://localhost:9001/confirmAdmin
 
-
+LOGIN_SERVICE=http://localhost:9001/admin
 
 
