--- a/BusPortal/src/main/resources/application.properties
+++ b/BusPortal/src/main/resources/application.properties
@@ -29,6 +29,11 @@ CUSTOMER_BY_NAME_SERVICE=http://localhost:9001/customerByName/
 
 TRAVELLER_SERVICE=http://localhost:9001/travels
 CONFIRM_TRAVELLER_SERVICE=http://localhost:9001/confirmTravels
+TRAVELLER_BY_NAME_SERVICE=http://localhost:9001/travelsByName
+TRAVELLER_BY_ID_SERVICE=http://localhost:9001/travelsById
+
+
+
 
 
 ADMIN_SERVICE=http://localhost:9001/admin
